[package]
name = "rsfetch-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
image = "0.24.7" # Required by egui_extras for image support
nixinfo = { git = "https://github.com/Phate6660/nixinfo" }

[dependencies.egui_extras]
version = "0.22.0"
features = ["image"]

[features]
music_mpd = ["nixinfo/music_mpd"]
music_playerctl = ["nixinfo/music_playerctl"]
